--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,9 @@
     <span>개구리</span>
     <span>개구리</span>
     <textarea>rows="10"cols="10" </textarea>
+    <h1>고라니</h1>
+    <h2>고라니</h2>
+    
 
 </body>
 </html>
