--- a/hello.html
+++ b/hello.html
@@ -12,15 +12,15 @@
     <h3>hello</h3>
     <a href="#">Hello</a>
     <input type="text">
-    <img src="https://images.chosun.com/resizer/KYa8I2zXP1Lni0d_gG-hi3Cjxb0=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/ZYPY6QMIOX2MLIDAHFVSAK3V4M.jpg">
+    <img src="https://images.chosun.com/resizer/KYa8I2zXP1Lni0d_gG-hi3Cjxb0=/464x0/smart/cloudfront-ap-northeast-1.images.arcpublishing.com/chosun/ZYPY6QMIOX2MLIDAHFVSAK3V4M.jpg"width ="200px" heigh="200px">
     <div>개구리</div>
     <div>개구리</div>
     <span>개구리</span>
     <span>개구리</span>
-    <textarea>rows="10"cols="10" </textarea>
+    <textarea> rows="10" cols="10"></textarea>
     <h1>고라니</h1>
     <h2>고라니</h2>
-    
+
 
 </body>
 </html>
