--- a/hello.html
+++ b/hello.html
@@ -17,10 +17,11 @@
     <div>개구리</div>
     <span>개구리</span>
     <span>개구리</span>
-    <textarea> rows="10" cols="10"></textarea>
+    <textarea> <rows="10" cols="10"></textarea>
     <h1>고라니</h1>
     <h2>고라니</h2>
 
 
 </body>
 </html>
+
